--- a/170516/Views/Product/ViewCategory.cshtml
+++ b/170516/Views/Product/ViewCategory.cshtml
@@ -168,7 +168,7 @@
                                                             <p class="hidden-sm hidden-md">@Model.MenuOnMainPage[i].Summary</p>
                                                         </div>
                                                         <div class="actions">
-                                                            <button class="btn btn-default btn-animated add-to-cart addToCartFrCategory" data-content="@Model.MenuOnMainPage[i].ProductID"><i class="fa fa-cart-plus"></i> Thêm vào giỏ hàng</button>
+                                                            <button class="btn btn-default btn-animated add-to-cart add-to-cart-quantity-1" data-content="@Model.MenuOnMainPage[i].ProductID"><i class="fa fa-cart-plus"></i> Thêm vào giỏ hàng</button>
                                                         </div>
                                                     </div>
                                                 </div>
